tests/type_check/function/function_violations.err.expected
error: at 21:4: [TC-NoEntryBlock] Function 'empty_body' has no entry block: body must contain at least one basic block
    |
 20 | # TC-NoEntryBlock rule; even an empty brace-pair is rejected.
 21 | fn empty_body() { }
    |    ^^^^^^^^^^
 22 | 
    |
error: at 27:28: [TC-DuplicateLocalName] Duplicate variable name 'x' in parameters of function 'duplicate_param'
    |
 26 | # TC-DuplicateLocalName on the second occurrence.
 27 | fn duplicate_param(x: i64, x: i64) { entry: return }
    |                            ^^^^^^
 28 | 
    |
error: at 35:3: [TC-DuplicateLocalName] Duplicate variable name 'x' in locals/parameters of function 'duplicate_local'
    |
 34 |   x: i64;
 35 |   x: i64;
    |   ^^^^^^^
 36 |   entry:
    |
error: at 45:3: [TC-DuplicateLocalName] Duplicate variable name 'x' in locals/parameters of function 'local_shadows_param'
    |
 44 | fn local_shadows_param(x: i64) {
 45 |   x: i64;
    |   ^^^^^^^
 46 |   entry:
    |
error: at 54:26: [TC-InvalidDeclaredType] In function 'return_param_not_last', parameter '$return' must be in the final position
    |
 53 | # a regular parameter fires TC-InvalidDeclaredType.
 54 | fn return_param_not_last($return: &out i64, x: i64) { entry: return }
    |                          ^^^^^^^^^^^^^^^^^
 55 | 
    |
error: at 60:45: [TC-InvalidDeclaredType] In function 'return_param_wrong_type', parameter '$return' must be of type '&out ReturnType', found i64
    |
 59 | # plain scalar fires TC-InvalidDeclaredType.
 60 | fn return_param_wrong_type(x: i64, $return: i64) { entry: return }
    |                                             ^^^
 61 | 
    |
error: at 66:49: [TC-InvalidDeclaredType] In function 'return_param_wrong_ref_kind', parameter '$return' must be of type '&out ReturnType', found &mut 's0 i64
    |
 65 | # kind for the return parameter and fires TC-InvalidDeclaredType.
 66 | fn return_param_wrong_ref_kind(x: i64, $return: &mut i64) { entry: return }
    |                                                 ^^^^^^^^
 67 | 
    |
error: at 72:36: [TC-InvalidDeclaredType] In function 'extern_bad_param_type', parameter 'x': Use of undeclared type 'Nope'
    |
 71 | # TC-InvalidDeclaredType naming the unknown identifier.
 72 | extern fn extern_bad_param_type(x: Nope);
    |                                    ^^^^
    |
